{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 21,
  "lineage": "8488b315-2039-948a-6454-a98dc72e1f2c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ci_cd_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/networkInterfaces/ci-cd-nic",
            "internal_domain_name_suffix": "if02necqshrejhubhmmfgqcmph.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ci-cd-ip-config",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/publicIPAddresses/ci-cd-ip",
                "subnet_id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/virtualNetworks/pis-vnet/subnets/pis-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-89-57-36",
            "name": "ci-cd-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "pis-rg-2",
            "virtual_machine_id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Compute/virtualMachines/ci-cd-vm"
          },
          "dependencies": [
            "azurerm_public_ip.ci_cd_ip",
            "azurerm_resource_group.pis_rg",
            "azurerm_subnet.pis_subnet",
            "azurerm_virtual_network.pis_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "deployment_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/networkInterfaces/deployment-nic",
            "internal_domain_name_suffix": "if02necqshrejhubhmmfgqcmph.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "deployment-ip-config",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/publicIPAddresses/deployment-ip",
                "subnet_id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/virtualNetworks/pis-vnet/subnets/pis-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-23-41-E5",
            "name": "deployment-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "pis-rg-2",
            "virtual_machine_id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Compute/virtualMachines/deployment-vm"
          },
          "dependencies": [
            "azurerm_public_ip.deployment_ip",
            "azurerm_resource_group.pis_rg",
            "azurerm_subnet.pis_subnet",
            "azurerm_virtual_network.pis_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "ci_cd_nic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/networkInterfaces/ci-cd-nic|/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/networkSecurityGroups/pis-nsg",
            "network_interface_id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/networkInterfaces/ci-cd-nic",
            "network_security_group_id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/networkSecurityGroups/pis-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.ci_cd_nic",
            "azurerm_network_security_group.pis_nsg",
            "azurerm_public_ip.ci_cd_ip",
            "azurerm_resource_group.pis_rg",
            "azurerm_subnet.pis_subnet",
            "azurerm_virtual_network.pis_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "deployment_nic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/networkInterfaces/deployment-nic|/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/networkSecurityGroups/pis-nsg",
            "network_interface_id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/networkInterfaces/deployment-nic",
            "network_security_group_id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/networkSecurityGroups/pis-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.deployment_nic",
            "azurerm_network_security_group.pis_nsg",
            "azurerm_public_ip.deployment_ip",
            "azurerm_resource_group.pis_rg",
            "azurerm_subnet.pis_subnet",
            "azurerm_virtual_network.pis_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "pis_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/networkSecurityGroups/pis-nsg",
            "location": "westeurope",
            "name": "pis-nsg",
            "resource_group_name": "pis-rg-2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "pis-nsg-rule-ssh",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "pis-nsg-rule-https",
                "priority": 1030,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "pis-nsg-rule-http",
                "priority": 1020,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "pis-nsg-rule-8080-dev",
                "priority": 1040,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.pis_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "pis-nsg-rule-8080-dev",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/networkSecurityGroups/pis-nsg/securityRules/pis-nsg-rule-8080-dev",
            "name": "pis-nsg-rule-8080-dev",
            "network_security_group_name": "pis-nsg",
            "priority": 1040,
            "protocol": "Tcp",
            "resource_group_name": "pis-rg-2",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.pis_nsg",
            "azurerm_resource_group.pis_rg"
          ]
        },
        {
          "index_key": "pis-nsg-rule-http",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/networkSecurityGroups/pis-nsg/securityRules/pis-nsg-rule-http",
            "name": "pis-nsg-rule-http",
            "network_security_group_name": "pis-nsg",
            "priority": 1020,
            "protocol": "Tcp",
            "resource_group_name": "pis-rg-2",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.pis_nsg",
            "azurerm_resource_group.pis_rg"
          ]
        },
        {
          "index_key": "pis-nsg-rule-https",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/networkSecurityGroups/pis-nsg/securityRules/pis-nsg-rule-https",
            "name": "pis-nsg-rule-https",
            "network_security_group_name": "pis-nsg",
            "priority": 1030,
            "protocol": "Tcp",
            "resource_group_name": "pis-rg-2",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.pis_nsg",
            "azurerm_resource_group.pis_rg"
          ]
        },
        {
          "index_key": "pis-nsg-rule-ssh",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/networkSecurityGroups/pis-nsg/securityRules/pis-nsg-rule-ssh",
            "name": "pis-nsg-rule-ssh",
            "network_security_group_name": "pis-nsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "pis-rg-2",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.pis_nsg",
            "azurerm_resource_group.pis_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ci_cd_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/publicIPAddresses/ci-cd-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.144.137.71",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "ci-cd-ip",
            "resource_group_name": "pis-rg-2",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.pis_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "deployment_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/publicIPAddresses/deployment-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.144.137.82",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "deployment-ip",
            "resource_group_name": "pis-rg-2",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.pis_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "pis_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/16"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/virtualNetworks/pis-vnet/subnets/pis-subnet",
            "name": "pis-subnet",
            "resource_group_name": "pis-rg-2",
            "virtual_network_name": "pis-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.pis_rg",
            "azurerm_virtual_network.pis_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "pis_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "90c67541-9150-44e2-9e81-3b1853404c7f",
            "id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/virtualNetworks/pis-vnet",
            "location": "westeurope",
            "name": "pis-vnet",
            "resource_group_name": "pis-rg-2",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/16",
                "id": "/subscriptions/c282e71f-5d25-4084-8690-8afe6c9dc5d2/resourceGroups/pis-rg-2/providers/Microsoft.Network/virtualNetworks/pis-vnet/subnets/pis-subnet",
                "name": "pis-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.pis_rg"
          ]
        }
      ]
    }
  ]
}